--- a/app/src/pages/aidPolitics.css
+++ b/app/src/pages/aidPolitics.css
@@ -1,17 +1,22 @@
-.visual-div{
+.visual-div {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
 }
 
-.svg-div{
+.svg-div {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
-#yes-div{
+#yes-div {
     cursor: pointer;
+}
+
+.country-circle:hover {
+    stroke-width: 4px !important;
+    opacity: 0.8 !important;
 }
