--- a/app/src/pages/aidPolitics.css
+++ b/app/src/pages/aidPolitics.css
@@ -20,3 +20,10 @@
     stroke-width: 4px !important;
     opacity: 0.8 !important;
 }
+
+.svg-div2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
